Update - copyright on project page

--- a/projects.html
+++ b/projects.html
@@ -42,14 +42,19 @@
         <div class="row py-3">
             <div class="col-sm py-4">
                 <a href="https://github.com/DuncanLab/OpenMaze" target="_blank">
-                <img src="https://i.imgur.com/M1Ep92b.png" height="200" width="300" class="rounded d-block"></a>
+                    <img src="https://i.imgur.com/M1Ep92b.png" height="200" width="300" class="rounded d-block"></a>
             </div>
             <div class="col-sm-8">
                 <div class="customH3">
-                    <a href="https://github.com/DuncanLab/OpenMaze" target="_blank"><h3 class="customH3 pb-0 my-0">OpenMaze</h3></a></div>
-                <div class="pt-0 mt-0 mb-4"><a href="https://github.com/DuncanLab/OpenMaze" target="_blank"><span class="subtitle"></span>https://github.com/DuncanLab/OpenMaze</a></div>
-                <p class="left-align">3D Maze designed to simulate the morris maze experiment for neuroscience research. Developed using <a href="https://unity3d.com"
-                        target="_blank">Unity 3D</a>. Uses JSON standard for configuration files, and Python for trial generation
+                    <a href="https://github.com/DuncanLab/OpenMaze" target="_blank">
+                        <h3 class="customH3 pb-0 my-0">OpenMaze</h3>
+                    </a>
+                </div>
+                <div class="pt-0 mt-0 mb-4"><a href="https://github.com/DuncanLab/OpenMaze" target="_blank"><span
+                            class="subtitle"></span>https://github.com/DuncanLab/OpenMaze</a></div>
+                <p class="left-align">3D Maze designed to simulate the morris maze experiment for neuroscience research.
+                    Developed using <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Uses JSON standard for
+                    configuration files, and Python for trial generation
                     and statistical helpers. Currently in the role of supporting developer.</p>
             </div>
         </div>
@@ -57,31 +62,45 @@
         <div class="row py-3">
             <div class="col-sm py-4">
                 <a href="https://github.com/DuncanLab/RoadRAGE" target="_blank">
-                <img src="https://i.imgur.com/fMCVYMw.png" height="200" width="300" class="rounded d-block"></a>
+                    <img src="https://i.imgur.com/fMCVYMw.png" height="200" width="300" class="rounded d-block"></a>
             </div>
             <div class="col-sm-8">
                 <div class="customH3">
-                    <a href="https://github.com/DuncanLab/RoadRAGE" target="_blank"><h3 class="customH3 pb-0 my-0">Road RAGE</h3></a></div>
-                <div class="pt-0 mt-0 mb-4"><a href="https://github.com/DuncanLab/RoadRAGE" target="_blank"><span class="subtitle">https://github.com/DuncanLab/RoadRAGE</span></a></div>
-                <p class="left-align">A driving simulator designed to help test decision making processes for neuroscience research. Developed
+                    <a href="https://github.com/DuncanLab/RoadRAGE" target="_blank">
+                        <h3 class="customH3 pb-0 my-0">Road RAGE</h3>
+                    </a>
+                </div>
+                <div class="pt-0 mt-0 mb-4"><a href="https://github.com/DuncanLab/RoadRAGE" target="_blank"><span
+                            class="subtitle">https://github.com/DuncanLab/RoadRAGE</span></a></div>
+                <p class="left-align">A driving simulator designed to help test decision making processes for
+                    neuroscience research. Developed
                     using
-                    <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Uses JSON standard for configuration files.
-                    Currently in the role of lead developer. The project is in the prototype phase.</p>
+                    <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Uses JSON standard for configuration
+                    files.
+                    Currently in the role of lead developer. The project is in the prototype phase.
+                </p>
             </div>
         </div>
         <hr>
         <div class="row py-3">
             <div class="col-sm py-4">
                 <a href="http://trivia-battle.herokuapp.com" target="_blank">
-                <img src="assets/images/triviabattle.PNG" height="200" width="300" class="rounded d-block"></a>
+                    <img src="assets/images/triviabattle.PNG" height="200" width="300" class="rounded d-block"></a>
             </div>
             <div class="col-sm-8">
                 <div class="customH3">
-                    <a href="http://trivia-battle.herokuapp.com" target="_blank"><h3 class="customH3 pb-0 my-0">Trivia Battle</h3></a></div>
-                <div class="pt-0 mt-0 mb-4"><a href="http://trivia-battle.herokuapp.com" target="_blank"><span class="subtitle">http://trivia-battle.herokuapp.com</span></a></div>
+                    <a href="http://trivia-battle.herokuapp.com" target="_blank">
+                        <h3 class="customH3 pb-0 my-0">Trivia Battle</h3>
+                    </a>
+                </div>
+                <div class="pt-0 mt-0 mb-4"><a href="http://trivia-battle.herokuapp.com" target="_blank"><span
+                            class="subtitle">http://trivia-battle.herokuapp.com</span></a></div>
                 <p class="left-align">A multiplayer trivia game that allows players to connect from any device. Uses
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API" target="_blank">Websockets</a>                    for event driven client updates as the round progresses. Client and game server communicate using
-                    <a href="https://redis.io/" target="_blank">Redis</a> messaging to allow for quick horizontal scalability.
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API"
+                        target="_blank">Websockets</a> for event driven client updates as the round progresses. Client
+                    and game server communicate using
+                    <a href="https://redis.io/" target="_blank">Redis</a> messaging to allow for quick horizontal
+                    scalability.
                     Front-end was programmed using
                     <a href="https://vuejs.org/" target="_blank">Vue.js</a>, back-end is mostly
                     <a href="https://nodejs.org/en/" target="_blank">Node JS</a>.
@@ -92,17 +111,25 @@
         <div class="row py-3">
             <div class="col-sm py-4">
                 <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank">
-                <img src="assets/images/spaghetti.PNG" height="200" width="300" class="rounded d-block"></a>
+                    <img src="assets/images/spaghetti.PNG" height="200" width="300" class="rounded d-block"></a>
             </div>
             <div class="col-sm-8">
                 <div class="customH3">
-                    <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><h3 class="customH3 pb-0 my-0">Spaghetti Makes me Moody</h3></a></div>
-                <div class="pt-0 mt-0 mb-4"><a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><span class="subtitle">https://spaghetti-makes-me-moody.herokuapp.com</span></a></div>
+                    <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank">
+                        <h3 class="customH3 pb-0 my-0">Spaghetti Makes me Moody</h3>
+                    </a>
+                </div>
+                <div class="pt-0 mt-0 mb-4"><a href="https://spaghetti-makes-me-moody.herokuapp.com/"
+                        target="_blank"><span class="subtitle">https://spaghetti-makes-me-moody.herokuapp.com</span></a>
+                </div>
                 <p>An online journal that uses
-                    <a href="https://cloud.google.com/natural-language/" target="_blank">Google Natural Language API</a>                    to analyze the sentiment (mood) of a user's journal entries to give them feedback. If a user creates
+                    <a href="https://cloud.google.com/natural-language/" target="_blank">Google Natural Language API</a>
+                    to analyze the sentiment (mood) of a user's journal entries to give them feedback. If a user creates
                     an account, they are able to save, and track their entries over time. Uses
-                    <a href="https://reactjs.org/" target="_blank">React</a> for the front-end. Back-end API created with
-                    <a href="https://github.com/swagger-api/swagger-node" target="_blank">Swagger node</a> for express, and
+                    <a href="https://reactjs.org/" target="_blank">React</a> for the front-end. Back-end API created
+                    with
+                    <a href="https://github.com/swagger-api/swagger-node" target="_blank">Swagger node</a> for express,
+                    and
                     <a href="https://www.mongodb.com/" target="_blank">MongoDB</a> for database operations.
                 </p>
             </div>
@@ -111,19 +138,23 @@
     <footer class="footer fixed-bottom border-top border-gray pt-1 pb-1">
         <div class="row">
             <div class="col pl-4 pt-2">
-                &copy; 2018 Cody Howarth.
+                &copy; 2023 Cody Howarth.
             </div>
             <div class="ml-auto mr-4 pt-2 pb-0">
-                <a href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-toggle="tooltip" data-placement="top" title="LinkedIn">
+                <a href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-toggle="tooltip"
+                    data-placement="top" title="LinkedIn">
                     <i class="fab fa-linkedin fa-lg mx-1"></i>
                 </a>
-                <a href="https://github.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top" title="Github">
+                <a href="https://github.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top"
+                    title="Github">
                     <i class="fab fa-github-square fa-lg mx-1"></i>
                 </a>
-                <a href="https://twitter.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top" title="Twitter">
+                <a href="https://twitter.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top"
+                    title="Twitter">
                     <i class="fab fa-twitter-square fa-lg mx-1"></i>
                 </a>
-                <a href="mailto:codyhowarth@gmail.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Email">
+                <a href="mailto:codyhowarth@gmail.com" target="_blank" data-toggle="tooltip" data-placement="top"
+                    title="Email">
                     <i class="fas fa-envelope-square fa-lg mx-1"></i>
                 </a>
             </div>
