update copyright year

--- a/index.html
+++ b/index.html
@@ -42,13 +42,19 @@
         <div id="about" class="row">
             <div class="col-xl-9">
                 <h3 class="customH3">About me</h3>
-                <p>I've always loved building things. In my first career I built tools and prototype parts as a <a href="//en.wikipedia.org/wiki/Machinist">Machinist</a>.
+                <p>I've always loved building things. In my first career I built tools and prototype parts as a <a
+                        href="//en.wikipedia.org/wiki/Machinist">Machinist</a>.
                     I graduated from <a href="//www.conestogac.on.ca/">Conestoga College</a> with a
-                    <a href="//www.conestogac.on.ca/fulltime/mechanical-technician-general-machinist-co-op">Mechanical Technician Diploma</a> and completed my <a href="//www.red-seal.ca/trades/m.1ch.3n.3st-eng.html">Red Seal Trade Certification</a>                    while working as a full time Machinist. My interest in learning new technologies eventually led me to
+                    <a href="//www.conestogac.on.ca/fulltime/mechanical-technician-general-machinist-co-op">Mechanical
+                        Technician Diploma</a> and completed my <a
+                        href="//www.red-seal.ca/trades/m.1ch.3n.3st-eng.html">Red Seal Trade Certification</a> while
+                    working as a full time Machinist. My interest in learning new technologies eventually led me to
                     pursue a degree in Computer Science. I graduated from
                     <a href="//www.utoronto.ca/">University of Toronto</a>, with a specialization in Computer Science.
-                    I currently work as Software Development Team Lead for <a href="https://illuminatemi.com/">Illuminate Manufacturing Intelligence</a> software by 
-                    <a href="https://atsautomation.com/">ATS Automation</a> in Ontario, Canada. Here are some <a href="projects.html">projects</a> that I've contributed
+                    I currently work as Software Development Team Lead for <a
+                        href="https://illuminatemi.com/">Illuminate Manufacturing Intelligence</a> software by
+                    <a href="https://atsautomation.com/">ATS Automation</a> in Ontario, Canada. Here are some <a
+                        href="projects.html">projects</a> that I've contributed
                     to.
                 </p>
             </div>
@@ -84,19 +90,23 @@
     <footer class="footer fixed-bottom border-top border-gray pt-1 pb-1">
         <div class="row">
             <div class="col pl-4 pt-2">
-                &copy; 2023 Cody Howarth.
+                &copy; 2024 Cody Howarth.
             </div>
             <div class="ml-auto mr-4 pt-2 pb-0">
-                <a href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-toggle="tooltip" data-placement="top" title="LinkedIn">
+                <a href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-toggle="tooltip"
+                    data-placement="top" title="LinkedIn">
                     <i class="fab fa-linkedin fa-lg mx-1"></i>
                 </a>
-                <a href="https://github.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top" title="Github">
+                <a href="https://github.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top"
+                    title="Github">
                     <i class="fab fa-github-square fa-lg mx-1"></i>
                 </a>
-                <a href="https://twitter.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top" title="Twitter">
+                <a href="https://twitter.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top"
+                    title="Twitter">
                     <i class="fab fa-twitter-square fa-lg mx-1"></i>
                 </a>
-                <a href="mailto:codyhowarth@gmail.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Email">
+                <a href="mailto:codyhowarth@gmail.com" target="_blank" data-toggle="tooltip" data-placement="top"
+                    title="Email">
                     <i class="fas fa-envelope-square fa-lg mx-1"></i>
                 </a>
             </div>
